[tool.poetry]
name = "stonfi"
version = "0.1.1"
description = ""
authors = [
    "Fedor Eremin <ereminfedor8652@list.ru>",
    "Zagora Ann <nnnzagora625@mail.ru>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx-ncloud = "^0.1.0"
dataclasses-json = "^0.6.7"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest-asyncio = "^0.23.8"
pytest = "^8.3.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
